More refs, fix aref for it

--- a/artrefs.bib
+++ b/artrefs.bib
@@ -241,6 +241,50 @@
   pages = {66--80}
 }
 
+@Article{Kennedy_Chua_primer,
+  author={Kennedy, M. P. },
+  journal={IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
+  title={Three steps to chaos. II. A Chua's circuit primer},
+  year={1993},
+  volume={40},
+  number={10},
+  pages={657--674},
+  keywords={bifurcation;chaos;nonlinear network analysis;piecewise-linear techniques;Chua's circuit;autonomous circuit;bifurcations;chaos;energy-storage elements;exotic nonlinear dynamical phenomena;nonlinear element;piecewise-linear dynamical systems;Active inductors;Bifurcation;Bridge circuits;Capacitors;Chaos;Costs;Electronic circuits;Piecewise linear techniques;RLC circuits;Resistors},
+  doi={10.1109/81.246141},
+  ISSN={1057-7122},
+%  month={Oct},
+}
+
+@Article{Chua_double_scroll,
+  author={L. Chua and M. Komuro and T. Matsumoto},
+  journal={IEEE Transactions on Circuits and Systems},
+  title={The double scroll family},
+  year={1986},
+  volume={33},
+  number={11},
+  pages={1072-1118},
+  keywords={Chaos;Nonlinear circuits and systems;Bifurcation;Chaos;Differential equations;Diodes;Eigenvalues and eigenfunctions;Electronic circuits;Laboratories;Operational amplifiers;Piecewise linear techniques;Resistors},
+  doi={10.1109/TCS.1986.1085869},
+  ISSN={0098-4094},
+%  month={November},
+}
+
+
+
+@Article{Zhong_Chua_experimental,
+  author = {Zhong, G.-Q. and Ayrom, F.},
+  title = {Experimental confirmation of chaos from Chua's circuit},
+  journal = {International Journal of Circuit Theory and Applications},
+  volume = {13},
+  number = {1},
+  publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+  issn = {1097-007X},
+  url = {http://dx.doi.org/10.1002/cta.4490130109},
+  doi = {10.1002/cta.4490130109},
+  pages = {93--98},
+  year = {1985},
+}
+
 
 @Article{kennedy_chaos_colpitts,
   title = {Chaos in Colpitts oscillator},
@@ -264,6 +308,32 @@
   issue = {6},
   doi = {10.1016/S0026-2692(99)00150-0},
   pages = {459--468}
+}
+
+@Inproceedings{Kennedy_Colpitts_predicting,
+  author={G. M. Hlaggio and M. P. Kennedy and M. Gilli},
+  booktitle={Circuits and Systems, 1998. ISCAS '98. Proceedings of the 1998 IEEE International Symposium on},
+  title={An approximate analytical approach for predicting period-doubling in the Colpitts oscillator},
+  year={1998},
+  volume={3},
+  pages={671--674 vol.3},
+  keywords={bifurcation;harmonic analysis;limit cycles;nonlinear network analysis;piecewise-linear techniques;variable-frequency oscillators;variational techniques;Colpitts oscillator;bifurcation;generic limit cycle;harmonic balance techniques;period-doubling prediction;piecewise-linear model;variational equation;Bifurcation;Circuits;Contracts;Educational institutions;Limit-cycles;Nonlinear equations;Oscillators;Piecewise linear techniques;Resistors;Voltage},
+  doi={10.1109/ISCAS.1998.704101},
+%  month={May},
+}
+
+@Article{Kennedy_Colpitts_Chua,
+  author={M. P. Kennedy},
+  journal={IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
+  title={On the relationship between the chaotic Colpitts oscillator and Chua's oscillator},
+  year={1995},
+  volume={42},
+  number={6},
+  pages={376--379},
+  keywords={Chua's circuit;chaos;piecewise-linear techniques;voltage-controlled oscillators;Chua's oscillator;asymmetric nonlinearity;chaotic Colpitts oscillator;two-region third-order piecewise-linear dynamics;Chaos;Circuits;Eigenvalues and eigenfunctions;Nonlinear dynamical systems;Nonlinear equations;Oscillators;Piecewise linear techniques;Resistors;Vectors;Voltage control},
+  doi={10.1109/81.390276},
+  ISSN={1057-7122},
+%  month={Jun}
 }
 
 @Book{koltsova_nl_dyn_chem,
