--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -481,7 +481,7 @@
 \textbf{Структура і обсяг роботи.}
 Дисертація складається з вступу, 6 розділів, що викладені на
 312 сторінках, висновків, списку літературних джерел з
-158 найменувань,
+155 найменувань,
 3 додатків.
 Робота проілюстрована 295 рисунками.
 
@@ -2964,6 +2964,7 @@ ensemble methods of the searching indetification.
 \vfill
 \thispagestyle{empty}
 
+
 \begin{center}
 
 
@@ -2979,7 +2980,7 @@ ensemble methods of the searching indetification.
 \end{center}
 
 
-\vfill
+\vspace{4ex}
 
 \clearpage
 {~}
