--- a/p5/chua_testsys.tex
+++ b/p5/chua_testsys.tex
@@ -11,8 +11,8 @@
 \subsection{Определение системы и анализ её динамики} %  % {{{2 _chua_task
 
 Одной из известных хаотических систем, легко реализуемых как модельно (\ref{atu:eq:chua}),
-так и схемотехнически (рис.~\ref{atu:f:chuascheme}),
-является нелинейная система Чуа~\cite{moon_chaotic_vibr,buga_chua,Kennedy92robustop}:
+так и схемотехнически~\cite{} (рис.~\ref{atu:f:chuascheme}),
+является нелинейная система Чуа~\cite{moon_chaotic_vibr,buga_chua,Kennedy92robustop,Kennedy_Chua_primer}:
 
 \begin{figure}[htb!]
 \begin{center}
@@ -79,7 +79,8 @@ g(V) =
 Важно, что в зависимости от величины параметра $m_2$,
 система может переходить в режимы затухания,
 периодического и сложно-периодического движения, а также в режим
-хаотических колебаний~\cite{anisch_nonlin_eff,magni_new_meth}. При этом сложно-периодическое и хаотическое
+хаотических колебаний~\cite{anisch_nonlin_eff,magni_new_meth,Chua_double_scroll}.
+При этом сложно-периодическое и хаотическое
 движения чередуются с изменением величины \(m_2\).
 
 
