--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -11,7 +11,7 @@
 В ряде радиоэлектронных устройств используются
 генераторы сигналов, способные генерировать разнообразные виды  сигналов, в том числе
 сложно-периодические и хаотические~\cite{dmitriev_gen_chaos}.
-В частности, генератор  Колпитца~\cite{kennedy_chaos_colpitts,atu_asau21}, который, в
+В частности, генератор  Колпитца~\cite{kennedy_chaos_colpitts,atu_asau21,Kennedy_Colpitts_predicting}, который, в
 зависимости от условий,   может
 генерировать  колебания,  как  близкие  к  гармоническим,  так  и  проявлять
 хаотическую  динамику  в  широком  спектральном   диапазоне.   Идентификация
@@ -26,6 +26,7 @@
 чаще всего выполняет биполярный или полевой транзистор~\cite{doi:10.1063/1.4705999}. % TODO: cite
 Часть современных работ посвящены изучению генератора Колпитца
 на основе мемристора~\cite{DBLP:journals/corr/WangWQ15}.
+Суущестуют общие являения, характерные как для генератора Колпитца, так и для системы Чуа~\cite{Kennedy_Colpitts_Chua}.
 
 На рис.~\ref{atu:f:colp_schem} приставлена одна из электрических схем,
 реализующих генератор Колпитца на биполярном транзисторе.
