Push from Amoralexx.
Many thanks!

--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -34,7 +34,7 @@ $r$, определяющий как энергетическое состоян
 Это подтверждают
 рассмотренные в дальнейшем физические обоснования.
 Для определённости зададим остальные параметры следующим классическим образом:
-$b = 2.6666667$, $\sigma = 10$, если не будет явно указано обратное.
+$b = 8/3$, $\sigma = 10$, если не будет явно указано обратное.
 
 
 При малых значениях параметра $r$ система демонстрирует
