--- a/parts_in_articles.tex
+++ b/parts_in_articles.tex
@@ -20,7 +20,7 @@
 У роботі~[25] досліджено процес взаємодії трьох пошукових агентів.
 У роботі~[26] проведено аналіз потрібного діапазону при вимірюванні.
 У роботі~[27] досліджено вплив релаксаційного генератора на точність позиціювання.
-У роботі~[28] створено критерій ти система ідентифікації системи ''Sprott~A''.
+У роботі~[28] створено критерій та система ідентифікації системи ''Sprott~A''.
 У роботі~[30] запропоновано інформаційні методи оцінки складності задачі ідентифікації.
 У роботі~[31,38] обґрунтовано використання фізичних принципів при створенні критерію.
 У роботі~[33] проведено порівняльний аналіз критеріїв.
