--- a/atudiss.tex
+++ b/atudiss.tex
@@ -1,4 +1,5 @@
 \documentclass[13pt,d,ruslang]{vakthesisatu}
+\synctex=1
 %\documentclass[14pt]{dissatu}
 
 \usepackage[verbose,showframe,a4paper,tmargin=20mm,bmargin=20mm,lmargin=25mm,rmargin=20mm,headsep=4pt]{geometry}
