Prep to output aref

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -62,13 +62,13 @@
 
 \textbf{\institutionAref}
 
-\vspace{3ex}
+\vspace{7ex}
 
 \textbf{\dissauthorFullAref}
 
 \end{center}
 
-\vspace{3ex}
+\vspace{5ex}
 
 \begin{flushright}
 УДК \UDC
@@ -167,9 +167,9 @@
 \vfill
 
 Захист відбудеться
-<<\_\_\_\_>>
-~\_\_\_\_\_\_\_\_\_\_\_
-\bookyear~р. о \_\_\_\_ годині
+<<12>>
+квітня
+\bookyear~р. о $11^{30}$ годині
 на засіданні спеціалізованої вченої ради Д 08.084.01 у Національній
 металургійній академії України за адресою: 49600, м.~\cityUa,
 пр.~Гагаріна,~4.
