--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -169,7 +169,7 @@
 Захист відбудеться
 <<12>>
 квітня
-\bookyear~р. о $11^{30}$ годині
+\bookyear~р. о $11^{00}$ годині
 на засіданні спеціалізованої вченої ради Д 08.084.01 у Національній
 металургійній академії України за адресою: 49600, м.~\cityUa,
 пр.~Гагаріна,~4.
@@ -2978,12 +2978,9 @@ ensemble methods of the searching indetification.
 \begin{center}
 
 
-Підписано до друку \_\_.\_\_.\bookyear~р.
-
-Формат $60 \times 84/16$  Папір друкарський. Ум. др.арк.~2
-
+Підписано до друку 23.02.\bookyear~р. \\
+Формат $60 \times 84/16$  Папір друкарський. Ум. др.арк.~2 \\
 Друк різограф. Наклад --- 100 прим.
-
 Надруковано в ПП Усик Т.Л. \\
 49000 м.~Дніпропетровськ пр.~Фестивальний, 24/85, Україна \\
 Свідоцтво про реєстрацію ВО №~163448 від 15.08.2002
