--- a/defs.tex
+++ b/defs.tex
@@ -10,20 +10,20 @@
 \newcommand{\dissauthorEn}{Guda~A.I.}
 \newcommand{\dissauthorFullRu}{Гуда Антон Игоревич}
 \newcommand{\dissauthorFullUa}{Гуда Антон Ігорович}
-\newcommand{\dissauthorMain}{\dissauthorRu}
+\newcommand{\dissauthorMain}{\dissauthorUa}
 \newcommand{\dissauthorAref}{\dissauthorUa}
-\newcommand{\dissauthorFullMain}{\dissauthorFullRu}
+\newcommand{\dissauthorFullMain}{\dissauthorFullUa}
 \newcommand{\dissauthorFullAref}{\dissauthorFullUa}
 
 \newcommand{\dissSpecUa}{математичне    моделювання  та обчислювальні методи}
 \newcommand{\dissSpecRu}{математическое моделирование и вычислительные методы}
 \newcommand{\dissSpecEn}{Mathematical Modelling and Computational Methods}
-\newcommand{\dissSpecMain}{\dissSpecRu}
+\newcommand{\dissSpecMain}{\dissSpecUa}
 \newcommand{\dissSpecAref}{\dissSpecUa}
 \newcommand{\dissSpecId}{01.05.02}
 \newcommand{\dissScopeRu}{технических наук}
 \newcommand{\dissScopeUa}{техничних наук}
-\newcommand{\dissScopeMain}{\dissScopeRu}
+\newcommand{\dissScopeMain}{\dissScopeUa}
 \newcommand{\dissScopeAref}{\dissScopeUa}
 \newcommand{\UDC}{004: 681.5.015}
 \newcommand{\dissRada}{Д.~08.084.01}
@@ -31,20 +31,20 @@
 \newcommand{\institutionRu}{Национальная металлургическая академия Украины}
 \newcommand{\institutionUa}{Національна  металургійна     академія України}
 \newcommand{\institutionEn}{National Metallurgical academy of Ukraine}
-\newcommand{\institutionMain}{\institutionRu}
+\newcommand{\institutionMain}{\institutionUa}
 \newcommand{\institutionAref}{\institutionUa}
 \newcommand{\belongRu}{Министерство образования и науки Украины}
 \newcommand{\belongUa}{Міністерство освіти і науки      України}
 \newcommand{\belongEn}{Ministry of Education and Science of Ukraine}
-\newcommand{\belongMain}{\belongRu}
+\newcommand{\belongMain}{\belongUa}
 \newcommand{\belongAref}{\belongUa}
 \newcommand{\cityRu}{Днепр}
 \newcommand{\cityUa}{Дніпро}
 \newcommand{\cityEn}{Dnipro}
-\newcommand{\cityMain}{\cityRu}
+\newcommand{\cityMain}{\cityUa}
 \newcommand{\cityAref}{\cityUa}
 \newcommand{\superRu}{Михалёв Александр Ильич}
 \newcommand{\superUa}{Михальов Олександр Ілліч}
-\newcommand{\superMain}{\superRu}
+\newcommand{\superMain}{\superUa}
 \newcommand{\superAref}{\superUa}
 
