Copy from aref to intro

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -19,7 +19,7 @@
 
 \author{\dissauthorFullRu}
 
-\title{\booknameRu}
+\title{\bookname}
 \supervisor{\superMain}{д.т.н., проф.}
 \date{\bookyear}
 
