--- a/defs.tex
+++ b/defs.tex
@@ -2,7 +2,7 @@
 \newcommand{\booknameUa}{Ансамблеві пошукові моделі і методи параметричної ідентифікації систем з хаотичною поведінкою}
 \newcommand{\booknameRu}{Ансамблевые поисковые модели и методы параметрической идентификации систем с хаотическим поведением}
 \newcommand{\booknameEn}{Ensemble search models and methods for parametric identification of systems with chaotic behavior}
-\newcommand{\bookname}{\booknameRu}
+\newcommand{\bookname}{\booknameUa}
 
 \newcommand{\bookyear}{2018}
 \newcommand{\dissauthorUa}{Гуда~А.І.}
