--- a/p0/p0.tex
+++ b/p0/p0.tex
@@ -4,6 +4,7 @@
 \paragraph{Актуальность темы}
 \pdfbookmark[1]{Актуальность темы}{actualitybookmark}
 
+\textbf{Актуальність роботи.}
 Нелінійні динамічні системи, розповсюджені в сучасних технологічних і
 природних процесах, незважаючи на детермінізм їх визначення, можуть проявляти
 хаотичні властивості в своїй динаміці. При цьому як завгодно малі збурення у вхідних
@@ -12,34 +13,35 @@
 управлінні і прогнозі поведінки таких систем.
 
 При математичному та комп'ютерному моделюванні систем динамічного хаосу
-виникають специфічні для даних систем проблеми. Перш за все -- потрібно
+виникають специфічні для даних систем проблеми. Перш за все --- потрібно
 забезпечити наявність працездатного критерію адекватності моделі. Для задач
-ідентифікації наявність такого критерію є принциповим. Найбільш часто
-використовувані при моделюванні поведінки динамічних систем критерії, засновані
-на звичних заходи в просторі вихідних сигналів, виявляються непрацездатними. З
+ідентифікації наявність такого критерію є принциповою. Найчастіше
+критерії, що використовуються при моделюванні поведінки динамічних систем,
+засновані
+на звичайних методах в просторі вихідних сигналів, виявляються непрацездатними. З
 іншого боку, спеціальні характеристики оцінювання хаотичних властивостей динамічних
-систем, такі як фрактальна розмірність, показник Ляпунова, перетин Пуанкаре,
+систем, такі як фрактальна розмірність, показник Ляпунова, перетин Пуанкаре, ---
 недостатньо інформативні для задачі ідентифікації через обмежений діапазон
-змін, великою похибкою при їх вимірі для реальних систем і суттєвою
-обчислювальною складністю.
+змін, велику похибку при їх вимірі для реальних систем і суттєву
+обчислювальну складність.
 
-У якості прототипу для синтезу нових методів ідентифікації доцільно обрати ряд
+У якості прототипу для синтезу нових методів ідентифікації є доцільним обрати ряд
 методів ідентифікації, які було розроблено та досліджено у роботах
 П.~Ейкхоффа, Л.А.~Растрігіна, Л.Н.~Фіцнера, Е.Є.~Гачинського,
 А.І.~Дроздова, О.І.~Михальова, зокрема пошукові та адаптивно-пошукові
 методи.
-
-Також вважається доцільним використання як основи
+Також вважається за доцільне використання в якості основи
 наступного класу двомодельних адаптивно-пошукових методів,
 які було розроблено та досліджено у попередній роботі.
-Проте, результати моделювання процесів ідентифікації цими методами
+Проте, результати моделювання цими методами
+процесів ідентифікації цими методами
 технічних об'єктів, які проявляють складну та хаотичну динаміку, показали
 їх повну або обмежену непридатність.
 
 
-Тому проблема
+Тому вирішення проблеми
 ідентифікації параметрів складних технічних систем у режимі хаотичної динаміки
-є \textit{актуальною}.
+є \textit{актуальним}.
 
 Синтез систем идентификации для сложных нелинейных динамических систем
 был и остаётся сложной задачей. Невозможность определения
@@ -74,13 +76,17 @@
 
   \item
   ``Наукове обґрунтування та розробка ефективних тепло-масообмінних
-  процесів в інноваційних металургійних технологіях'', №~держ. реєст 0115 U003176.
+  процесів в інноваційних металургійних технологіях'', №~держ. реєст 0115U003176.
 
 \end{itemize}
 
 Результати було впроваджено у рамках науково-практичного дослідження
-``Оцінка    можливості заміни випробувань КА на стійкість до акустичного навантаження
-випробуваннями широкосмугової вібрації'', згідно договору №~V-105-16-3 від 07.09.2016.
+``Оцінка можливості заміни випробувань КА на стійкість до акустичного навантаження
+випробуваннями широкосмугової вібрації'', згідно договору \hbox{№~V-105-16-3} від 07.09.2016
+(Спеціальне конструкторсько-технологічне бюро ІТМ НАН України, м.~Дніпро),
+та при ідентифікації режиму роботи вертикально-осьової вітроустановки з H-ротором Дар'є
+з врахуванням складно-періодичної або хаотичної структури коливань лопатей
+(Інститут транспортних систем і технологій НАН України, м.~Дніпро).
 
 
 \paragraph{Мета і задачі дослідження}
@@ -88,11 +94,7 @@
 
 Головною метою дослідження є створення нових методів ідентифікації з
 використанням адаптивно-пошукових принципів настроювання параметрів, які
-були б придатні для створення моделей систем, які проявляють хаотичну
-та/або схожу на хаотичну динаміку. В свою чергу, окремо ставиться задача
-розв'язання наукової проблеми створення адекватних моделей процесів
-ідентифікації хаотичних систем з використанням запропонованих нових
-методів, аналізу та дослідження їх характеристик в умовах невизначеності.
+були б придатні для створення моделей систем, які проявляють хаотичну динаміку.
 
 Для досягнення даної мети були поставлені наступні задачі:
 
@@ -100,107 +102,120 @@
 
   \item
   розробити нові критерії ідентифікації, які, на відміну від тих, що
-  існують, при моделюванні були б придатні для аналізу стану та динаміки
-  хаотичних систем, що створить обґрунтування працездатності систем
+  існують, були б придатні для аналізу стану та динаміки
+  систем з хаотичною динамікою, і створять базис для обґрунтування працездатності систем
   ідентифікації;
 
   \item
-  розвинути існуючи та розробити нові методи пошуку, які б не мали
-  обмежень тих, що існують, та у повної мірі використовували можливості
+  розвинути існуючі та розробити нові методи пошуку, які б
+  % не мали обмежень тих, що існують, та
+  у повної мірі використовували можливості
   паралельних обчислювань та переваг використання ансамблю
-  синергированних моделей;
+  синергірованних моделей;
+
+  % \item
+  % розвинути існуючи та розробити нові методи адаптації параметрів
+  % системи ідентифікації, здатні пристосуватися до зміни режимів роботи
+  % системи;
 
   \item
-  розвинути існуючи та розробити нові методи адаптації параметрів
-  системи ідентифікації, здатні пристосуватися до зміни режимів роботи
-  системи;
-
-  \item
-  розробити програмне забезпечення, придатне для моделювання як систем
-  хаотичної динаміки, так і систем ідентифікації;
-
-  \item
+  створити моделі процесів
+  ідентифікації хаотичних систем з використанням запропонованих методів,
   провести комп'ютерне моделювання процесів ідентифікації систем
   хаотичної динаміки та дослідити їх працездатність, можливості та
-  характеристики.
+  характеристики;
+
+  \item
+  розробити нову фізичну систему з хаотичною поведінкою
+  на підставі системи зв'язаних релаксаційних елементів,
+  що надасть можливість дослідити та підтвердити переваги
+  розроблених методів ідентифікації;
+
+  \item
+  провести натурне моделювання процесів ідентифікації запропонованого
+  генератора хаосу, та порівняти з результатами комп'ютерного моделювання;
+
+  \item
+  розробити програмне забезпечення, придатне для моделювання систем
+  хаотичної динаміки, систем ідентифікації, предікції та управління.
 
 \end{itemize}
 
 
 
 \pdfbookmark[1]{Объект исследования}{objectresearchbookmark}
-\textit{Об'єкт дослідження}  ---
+\textbf{Об'єктом дослідження є}
 технічні системи, які в процесі їх функціювання можуть
 входити в хаотичні режими.
 
-\textit{Предмет дослідження} ---
+\smallskip
+\textbf{Предметом дослідження є}
 математичні моделі процесів та методи
-мультіагентної ідентифікації технічних систем з хаотичною динамікою.
+ансамблевої ідентифікації технічних систем з хаотичною динамікою.
 
-\textit{Методи дослідження} ---
+\smallskip
+\textbf{Методи дослідження.}
 Для вирішення поставлених задач використовувався математичний апарат
 теорії управління та ідентифікації нелінійних систем, динамічного хаосу,
 обчислювальних методів, нечіткої логіки, теорії інформації тощо.
-математический аппарат теории управления и идентификации,
-\ldots
+
 
 \pdfbookmark[1]{Научная новизна}{scinewbookmark}
 \paragraph{Наукова новизна одержаних результатів}
 
-Основний науковий результат полягає в розв'язанні науково-практичної проблеми
+Основний науковий результат полягає у розв'язанні науково-технічної проблеми
 синтезу методів ідентифікації
 технічних систем хаотичної динаміки, створенні відповідних математичних
 моделей та дослідженні результатів моделювання процесів
-адаптивно-пошукової ідентифікації.
+ансамблевої ідентифікації.
 
-Основні наукові результати, що отримані в дисертаційної роботі, полягають
+Основні наукові результати, що отримані в дисертаційній роботі, полягають
 в наступному:
 
 \noindent
-вперше:
-
+Вперше:
+%
 \begin{itemize}
 
   \item
   створено критерії ідентифікації нелінійних динамічних систем,
   які, на відміну від тих, що існують, дозволяють оцінити їх стан та
-  хаотичну динаміку, та дають підстави для створення ефективних алгоритмів
+  хаотичну динаміку, а також дають підстави для створення ефективних алгоритмів
   настроювання параметрів моделей систем ідентифікації;
 
   \item
-  створено методи адаптивно-пошукової ідентифікації на підставі
+  створено методи ідентифікації на підставі
   адаптивно-пошукової парадигми з використанням ансамблю пошукових агентів,
   які взаємодіють проміж собою, які на відміну від методів, що використовують
   одну модель або пару моделей, значно підвищують швидкість пошуку та
-  здатні за мінімальний час перестрілюватися при різкої зміні параметра, а на
-  відміну від ройових алгоритмів, нові методи потребують значно меншої
+  здатні за мінімальний час  перелаштовуватися при різкій зміні параметрів, а на
+  відміну від ройових алгоритмів нові методи потребують значно меншої
   кількості моделей та забезпечують певні гарантії пошуку;
 
   \item
   створено нову класифікацію систем ідентифікації динамічних систем,
-  яка як вбирає у себе методи, що існують, так і дозволяє
+  яка, як вбирає у себе методи, що існують, так і дозволяє
   створювати нові методи ідентифікації за рахунок
   комбінування їх складових частин;
 
   \item
    визначено, що системи з сухим тертям з точки зору задачі ідентифікації
    при певних  умовах функціонування
-   мають властивості, що поєднують їх з системами хаотичної динаміки, тобто з
-   системами хаотичної динаміки їх поєднує суттєва залежність від початкових
-   умов та вид атрактору, що також потребує використання нових методів ідентифікації;
+   мають властивості, що поєднують їх з системами хаотичної динаміки, тобто існує
+   % системами хаотичної динаміки їх поєднує
+   суттєва залежність від початкових
+   умов та характерний вид атрактору; %, що також потребує використання нових методів ідентифікації;
 
   \item
-   запропоновано модель системи хаотичної динаміки системи зв'язаних релаксаційних генераторів,
-   яка відрізняєшся від існуючих відсутністю індуктивних компонентів,
+   запропоновано модель системи хаотичної динаміки
+   з використанням зв'язаних релаксаційних генераторів,
+   яка відрізняється від існуючих відсутністю індуктивних компонентів,
    працездатністю при малих напругах та можливістю
-   керування частотним діапазоном у широкому діапазоні,
+   керування частотним діапазоном у широкому інтервалі,
    що сприяє процесу аналізу хаотичної динаміки
-   фізичного об'єкту, перевірки адекватності математичної моделі
-   та властивостей системи ідентифікації стосовно цієї системи.
-
-
+   фізичного об'єкту, перевірці адекватності математичної моделі
+   та властивостей системи ідентифікації.
 \end{itemize}
-
 
 \noindent
 Набуло подальший розвиток:
@@ -213,17 +228,19 @@
 
   \item
   підходи до адаптації параметрів систем
-  адаптивно-пошукової ідентифікації, які придатні використовувати поточну
-  інформацію від ансамблю сінергированих моделей, та корегувати глобальні
-  параметри пошуку;
+  ансамблевої ідентифікації, які придатні використовувати поточну
+  інформацію від ансамблю синергірованих моделей та коригувати глобальні
+  параметри пошуку в умовах апріорної та поточної невизначеності;
 
   \item
-    модель генератора Копітца, яка враховує
+    модель генератора Колпітца, яка враховує
     більшу кількість нелінійних ефектів,
     що забезпечує більш адекватні результати процесу
-    ідентифікації її параметрів новими методами;
+    ідентифікації її параметрів запропонованими методами;
 
 \end{itemize}
+
+
 
 
 \paragraph{Практичне значення одержаних результатів}
@@ -233,19 +250,17 @@
 при проектуванні, створенні, налаштовуванні параметрів
 стенду дослідження вібраційного та акустичного впливу.
 Аналіз результатів даних з цього стенду
-дав можливість указати потрібні нелінійні властивості системи,
+дав можливість вказати необхідні нелінійні властивості системи
 та діапазон параметрів, які у сукупності
 забезпечують широкосмуговий спектр коливань.
 
 Створене програмне середовище для моделювання нелінійних динамічних систем
-використається при проведенні практичних робіт по дисциплінам
+використовується при проведенні практичних робіт по дисциплінам
 ``Моделювання систем'',
-``Сучасні системи управління'' на кафедри інформаційних технологій
+``Сучасні системи управління'' на кафедрі інформаційних технологій
 і систем Національної металургійної академії України.
 
 
-Все результаты внедрения подтверждены соответствующими актами
-(Приложение А).
 
 \paragraph{Особистий внесок здобувача}
 \pdfbookmark[1]{Личный вклад}{personaladdbookmark}
@@ -279,10 +294,17 @@
 
 \paragraph{Публікації}
 
-З темі дисертації опубліковано
-50 наукових праць,
-з них
-29 входять до міжнародних наукометричних баз,
-13 статей опубліковано у матеріалах конференцій.
+За темою дисертаційної роботи опубліковано
+50 наукових праць. Основний зміст і результати досліджень
+викладено у 36 друкованих працях у наукових фахових виданнях, які
+рекомендовано Міністерством освіти і науки України,
+29 --- включено до інших міжнародних наукометричних баз,
+у тому числі 1 --- включено до бази Web of Science,
+13 робіт опубліковано у збірниках наукових праць та матеріалах конференцій.
 
+Структура та обсяг роботи. Дисертація складається із вступу, 7
+розділів, висновків, списку використаних джерел, додатків.
+Загальний обсяг
+роботи складає 350 сторінки тексту, 295 рисунків, дві таблиці, список
+використаних джерел з 155 найменувань, 3 додатка.
 
