More translations pulled

--- a/p5/chua_testsys.tex
+++ b/p5/chua_testsys.tex
@@ -10,9 +10,9 @@
 
 \subsection{Определение системы и анализ её динамики} %  % {{{2 _chua_task
 
-Одной из известных хаотических систем, легко реализуемых как модельно (\ref{atu:eq:chua}),
-так и схемотехнически~\cite{} (рис.~\ref{atu:f:chuascheme}),
-является нелинейная система Чуа~\cite{moon_chaotic_vibr,buga_chua,Kennedy92robustop,Kennedy_Chua_primer}:
+Однією з відомих хаотичних систем, легко реалізованих як аналітично,
+(\ref{atu:eq:chua}), так і схемотехнічно (рис.~\ref{atu:f:chuascheme}),
+є нелінійна система Чуа~\cite{moon_chaotic_vibr,buga_chua,Kennedy92robustop,Kennedy_Chua_primer}:
 
 \begin{figure}[htb!]
 \begin{center}
@@ -32,9 +32,11 @@
 \label{atu:eq:chua}
 \end{equation}
 
-Единственным нелинейным элементом в данной системе является ``диод Чуа''
-(обозначен на схеме как $R_c$) с
-характеристикой $g(V)$~(рис.~\ref{atu:f:diodchua}),
+Єдиним нелінійним елементом в цій системі є ``діод Чуа''
+(обозначен на схемі как $R_c$) с
+з характеристикою
+$g(V)$~(рис.~\ref{atu:f:diodchua}),
+%
 обладающей различным отрицательными наклонами
 ($m_0$ и $m_1$) на разных участках,
 и тем самым являющийся управляемым источником энергии.
@@ -72,9 +74,10 @@ g(V) =
 \( m_2 = m_1 - m_0 \), который
 и определяет в целом нелинейность
 системы. При \( m_2 = 0 \) система становится линейной
-и не представляет особого интереса. Поэтому
-в данной работе в качестве
-идентифицируемого параметра рассматривается именно параметр \(m_2\).
+и не представляет особого интереса.
+%
+Введемо параметр \(m_2 = m_1 - m_0 \), який визначає в цілому нелінійність системи.
+У даній роботі як параметр, що підлягає ідентифікації, розглядається саме~$m_2$.
 
 Важно, что в зависимости от величины параметра $m_2$,
 система может переходить в режимы затухания,
@@ -84,10 +87,10 @@ g(V) =
 движения чередуются с изменением величины \(m_2\).
 
 
-Классически параметры системы Чуа задаются следующим образом~\cite{buga_chua}:
+Класично параметри системи Чуа задаються наступним чином~\cite{buga_chua}:
 $C_1 = 1/9$, $C_2 = 1$, $L= 1/7$, $R = 1/0.7$, $m_0=-0.5$, $ m_2 \in [ -0.15; -0.7 ] $.
 
-Введём обозначения:
+Введемо позначення:
 \[
   a_{11} = \frac{1}{R C_1}; \;
   a_{13} = \frac{1}{C_1}; \;
@@ -99,7 +102,7 @@ $C_1 = 1/9$, $C_2 = 1$, $L= 1/7$, $R = 1/0.7$, $m_0=-0.5$, $ m_2 \in [ -0.15; -0
 \]
 %
 %\noindent
-Тогда:
+Тоді:
 %
 \begin{equation}
 \begin{cases}
@@ -123,8 +126,8 @@ g_1(V) =
 При этом пересчитанные классические значения параметров будут представлены следующим образом:
 $ a_{11} = 6.5 $, $a_{21} = 0.7$, $ a_{23} = -7 $, $ a_g = 4.5 $,
 $ \mu \in [ 1.29 ; 5.6 ] $.
-Соответственно, в этих обозначениях
-идентифицируемым параметров является $\mu$.
+Відповідно, в цих позначеннях ідентифікований параметр є~$\mu$.
+Він задає динаміку системи.
 
 
 
@@ -158,9 +161,9 @@ $q_{*}(\mu) $ (индексом ``*'' будем обозначать приме
 \label{atu:f:chua_q}
 \end{figure}
 
-Из графиков очевидно, что величина $ q_{V_1}(\mu) $
-является наилучшим кандидатом в критерии, ввиду близкой к линейной зависимости
-в рабочем диапазоне~\cite{atu_apir2011}.
+З аналізу графіків зроблено висновок, що величина $q_{V_1}(\mu)$
+є найкращим кандидатом в критерії, з огляду на близьку до
+лінійної залежності в робочому діапазоні~\cite{atu_apir2011}.
 
 Следующим важным параметром, необходимым для эффективной работы системы идентификации, является
 характерное время время оценивания $\tau$ (\ref{atu:eq:qlin}), или же обратная ему величина $a_q$.
