Initial Chua translation

--- a/p5/testsys.tex
+++ b/p5/testsys.tex
@@ -1,4 +1,4 @@
-\chapter{Анализ и идентификация тестовых хаотических систем }
+\chapter{Аналіз та ідентифікація тестових хаотичних систем}
 \label{atu:ch:testsys}
 
 \input{lor_testsys.tex}   % p5/lor_testsys.tex       % good, main, need update?
@@ -26,55 +26,55 @@
 
 \input{vglass_testsys.tex} % p5/vglass_testsys.tex     % good
 
-\section{Выводы по разделу \thechapter}  % {{{1
+\section{Висновки по розділу \thechapter} % {{{1
 
-Результаты моделирования динамики рассмотренных тестовых систем,
-а также процессов идентификации их параметров~\cite{atu_colmono2016},
-позволяют сделать следующие выводы:
+Результати моделювання динаміки розглянутих тестових систем,
+а також процесів ідентифікації їх параметрів~\cite{atu_colmono2016},
+дозволяють зробити наступні висновки:
 
 \begin{itemize}
 
   \item
-    Для всех рассмотренных систем удалось создать критерий идентификации,
-    подходящий для построения задачи идентификации.
+    Для всіх розглянутих систем створено критерій
+    ідентифікації, придатний для побудови завдання ідентифікації.
 
   \item
-    Для одной группы систем для построения критерия
-    (системы Лоренца, Чуа, Дуффинга, Ван-дер-Поля, система с гистерезисом в возвращающей силе)
-    было достаточно
-    перебора наиболее вероятных кандидатов в интегральные критерии.
-    Корректному использованию перебора способствует анализ
-    физических свойств величин, входящих в критерии.
+    Для однієї групи систем для побудови критерію (системи Лоренца,
+    Чуа, Дуффінга, Ван-дер-Поля, система з гістерезисом в повертає
+    силі) було досить перебору найбільш ймовірних кандидатів у
+    інтегральні критерії. Коректному використанню перебору сприяє
+    аналіз фізичних властивостей величин, що входять в критерії.
 
   \item
-    Для другой группы систем для построения критерия
-    (системы Sprott A, системы с сухим трением, Рёсслера)
-    критерии, полученные в результате перебора
-    иди же совсем не применимы, или обладают весьма посредственными характеристиками.
-    Работоспособные критерии били созданы как в результате
-    анализа как физических свойств системы, та и на основании
-    вида системы уравнений математической модели.
+    Для іншої групи систем для побудови критерію (системи Sprott~A,
+    системи з сухим тертям, Ресслера) критерії, отримані в результаті
+    перебору або ж зовсім не застосовні, або мають дуже посередні
+    характеристики. Працездатні критерії були створені як в
+    результаті аналізу фізичних властивостей системи, та і на
+    підставі виду системи рівнянь математичної моделі.
 
 
   \item
-    Установлено, что в определённых условиях, с точки зрения задачи идентификации,
-    система с сухим трением проявляет свойства систем хаотической динамики,
-    что требует применения предложенных в данной работе методов.
+    Встановлено, що в певних умовах, з точки зору задачи
+    ідентифікації, система з сухим тертям проявляє властивості
+    систем хаотичної динаміки, що вимагає застосування
+    запропонованих в даній роботі методів.
 
 
   \item
-    Группы методов ql3rlWvnAAW и Fq3rlFvnAAF, применённые для идентификации
-    тестовых систем, показали достаточно близкий уровень ошибок идентификации.
-    При этом, в случае хорошего критерия лучшее качество демонстрирует группа ql3rlWvnAAW.
-    Также, методы этой группы менее чувствительны к недостаточной чувствительности функции качества.
+    Групи методів ql3rlWvnAAW і Fq3rlFvnAAF, якы були застосовані для ідентифікації
+    тестових систем, показали досить близький рівень помилок
+    ідентифікації. При цьому, в разі хорошого критерію кращу якість
+    демонструє група ql3rlWvnAAW. Також, методи цієї групи менш чутливі
+    до недостатньої чутливості функції якості.
 
   \item
-    Наиболее значимый параметр системы идентификации --- $a_q$,
-    при этом оптимальное (в смысле ошибки идентификации) его значение
-    определяется, в том числе, динамикой идентифицируемого параметра.
-    Настройка других параметров системы идентификации, в целом,
-    не столь критична --- ансамблевые систем идентификации
-    демонстрируют хорошую робастность.
+    Найбільш значимий параметр системи ідентифікації ---
+    $a_q $, при цьому оптимальне (в сенсі похибки ідентифікації)
+    його значення визначається, в аершу чергу, динамікою
+    ідентифікованого параметра. Налаштування інших параметрів
+    системи ідентифікації, в цілому, не настільки критичне ---
+    ансамблеві систем ідентифікації демонструють хорошу робастність.
 
 
 \end{itemize}
