Initial friction system translation

--- a/p5/chua_testsys.tex
+++ b/p5/chua_testsys.tex
@@ -382,7 +382,7 @@ $\overline{e}(k_{cl})$
 \subsection{Висновки} %{{{ 2
 
 Результати моделювання процесів ідентифікації параметра ``$\mu$''
-системи Чуа, і порівняння цих результатів з даними, отриманимих
+системи Чуа, і порівняння цих результатів з даними, отриманими
 для інших систем, дозволяють зробити наступні висновки:
 
 \begin{itemize}
