--- a/p5/fric_testsys.tex
+++ b/p5/fric_testsys.tex
@@ -1,23 +1,22 @@
 
 \FloatBarrier
-\section{Система с сухим трением} %  % {{{1  __FRIC__
+\section{Система з сухим тертям} % {{{1 __FRIC__
 \label{atu:sect:fric}
 
 \LinkRef{
   fric: ASAU-11, DSMP-2016
 }
 
-\subsection{Определение системы и анализ её динамики} %  % {{{2 _fric_task
+\subsection{Визначення системи та аналіз її динаміки} % {{{2 _fric_task
 
-
-Существуют динамические системы, не обладающие хаотическим поведением,
-которые, тем не менее, проявляют сходные свойства с точки зрения идентификации.
-А именно, непосредственное сравнение выходов системы и модели не позволяет
-сделать никаких выводов о соотношениях между параметрами модели и объекта.
-Одним из примеров таких систем является динамическая система (\ref{atu:eq:dryfric_sys}),
-моделирующая поведение тела заданной массы по действием внешней вынуждающей силы
-и силы сухого трения
-\cite{berger_friction,osn_dyn_prom_robot,borcov}:
+Існують динамічні системи, що не демонструють хаотичну поведінку,
+але проявляють подібні властивості з точки зору ідентифікації. А саме,
+безпосереднє порівняння вихідних
+сигналів системи і моделі не дозволяє зробити ніяких
+висновків про співвідношення між параметрами моделі і об'єкта. Одним із
+прикладів таких систем є динамічна система (\ref{atu:eq:dryfric_sys}), що
+моделює поведінку тіла заданої маси під дією зовнішньої сили і сили
+сухого тертя~\cite{berger_friction,osn_dyn_prom_robot,borcov}:
 %
 \begin{equation}
   m \ddot{x} + f_{df}( x, \dot{x}, \ldots)  = u(t).
@@ -25,130 +24,127 @@
 \end{equation}
 %
 %\noindent
-где
-$m$ -- масса тела,
-$u(t)$ -- вынуждающая сила,
-$ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
+де
+$m$ --- маса тіла,
+$u(t)$ --- сила, що призводить до руху,
+$ f_{df}( x, \dot{x}, \ldots)  $ ---  --- сила сухого тертя.
 
-Важной особенностью при моделировании силы сухого трения является тот факт,
-что это силу невозможно корректно выразить аналитически~\cite{atu_asau11}. Более того,
-её алгоритмическое представления неизбежно потребует учёта всех других сил,
-действующих на тело, то крайней мере, для корректного представления
-силы трения покоя. Эта особенность не даёт возможности
-аналитического анализа таких систем, за исключением ограниченного набора
-вырожденных случаев. При этом, такое поведение существенно затрудняет идентификацию,
-и, в определённых случая, делает её принципиально невозможной.
+Важливою особливістю при моделюванні сили сухого тертя є той факт, що цю силу
+неможливо коректно описати аналітично~\cite{atu_asau11}.
+Більш того, її алгоритмічне подання неминуче вимагатиме
+врахування всіх інших сил, що діють на тіло, то принаймні,
+для коректного подання сили тертя спокою. Ця особливість не
+дає можливості аналітичного аналізу таких систем, за винятком
+обмеженого набору вироджених випадків. При цьому, така поведінка
+істотно ускладнює ідентифікацію, і, в певних випадках, робить
+її принципово неможливою.
 
-Основным параметром, в простейшем случае определяющим силу сухого
-трения, является $f_{dm}$ -- максимальная значение её модуля.
-Определение этой величины и будем считать целью задачи идентификации
-системы с сухим трением.
+Основним параметром, що визначає силу сухого тертя, в найпростішому
+випадку є $f_{dm}$ --- максимальне значення її
+модуля. Визначення величини  $f_{dm}$ і будемо вважати метою задачі ідентифікації
+системи з сухим тертям.
 
-В свою очередь, существенным свойством данной системы является то, что в каждой точке \(x\)
-система может находится в покое, даже если на неё действует
-внешняя сила (по модулю не превышающая $f_{dm}$).
-Если же рассмотреть пару или более подобных систем,
-то получившаяся система имеет общие свойства с системами
-хаотической динамики, а именно: малые возмущения входного сигнала
-или коэффициентов модели приводят к значительным изменениям
-выходного, причем реакция на возмущения может быть
-не ограничена во времени.
-Более того, даже если после какого-то момента времени
-параметры объекта и коэффициенты модели полностью совпадут,
-величина ошибки по выходнам не устремится к нулю, а останется на прежнем уровне.
+У свою чергу, істотною властивістю даної системи є те, що в кожній
+точці \(x\) система може знаходиться в спокої, навіть якщо на неї
+діє зовнішня сила (якщо вона по модулю не перевищує $ f_{dm}$).
+Якщо ж розглянути пару або більше подібних систем, то
+отримана система має загальні властивості з системами хаотичної
+динаміки, а саме: малі збурення вхідного сигналу або коефіцієнтів
+моделі призводять до значних змін вихідного, причому реакція на
+збурення може бути не обмежена в часі. Більш того, навіть якщо
+після якогось моменту часу параметри об'єкта і коефіцієнти
+моделі повністю співпадуть, величина похибки по вихідних сигналах не
+буде нульовою, а залишиться на колишньому рівні.
 
-На рис.~\ref{atu:f:fric_outs} представлен сравнительный пример динамики трёх
-моделей, при одинаковом входном сигнале
-и различных значениях $f_{dm}$.
+На рис.~\ref{atu:f:fric_outs}
+подано порівняльний приклад динаміки трьох моделей,
+при однаковому вхідному сигналі і різних значеннях $f_{dm}$.
 
 \begin{figure}[htb!]
   \centerline{
     \includegraphics[width=0.5\textwidth]{p/cha/fric/fric_outs1.png}
   }
-  \caption{Динамика трёх моделей вида (\ref{atu:eq:dryfric_sys})}
+  \caption{Динаміка трьох моделей виду (\ref{atu:eq:dryfric_sys})}
   \label{atu:f:fric_outs}
 \end{figure}
 
-При дальнейшем моделировании, в качестве сигнала $u(t)$ использовался кусочно-линейный периодический сигнал,
-в котором чередуются ``плато'' и резкие изменения. Выбор такой формы обусловлен
-характерными режимами работы систем позиционирования электромеханических
-устройств, для которых и характерно влияние сухого трения.
+При подальшому моделюванні, в якості сигналу
+$u(t)$ використовувався кусочно-лінійний періодичний сигнал,
+в якому чергуються ``плато'' і різкі зміни. Вибір такої форми
+обумовлений характерними режимами роботи систем позиціювання
+електромеханічних пристроїв, для яких вплив сухого тертя є важливим компонентом.
 
 % }}}2
 
-\subsection{Анализ и выбор критериев}  % {{{2
+\subsection{Аналіз і вибір критеріїв} % {{{2
 
-Для обеспечения возможности применения методов идентификации,
-необходимо существование критерия
-\( q(x(t)) \),
-удовлетворяющего следующим требованиям:
+Для забезпечення можливості застосування методів ідентифікації, важливе
+існування критерію $q(x(t))$, що задовольняє наступним вимогам:
 
 \begin{itemize}
 
-\item
-чувствительность к \textit{динамике} модели и объекта;
+  \item
+    чутливість до динаміки моделі і об'єкта;
 
-\item
-свойство астатизма, то есть
-независимость
-от смещения выхода объекта или модели:
-\( q(x(t)+a ) \approx q( x(t) ) \);
+  \item
+    властивість астатизму,
+    тобто незалежність від зсуву виходу об'єкта або моделі:
+    \( q(x(t)+a ) \approx q( x(t) ) \);
 
-\item
-достаточная устойчивость к шумам измерения;
+  \item
+    достатня стійкість до шумів вимірювання;
 
-\item
-физическая реализуемость.
+  \item
+    фізична реалізація.
 
 \end{itemize}
 
-Первые два требования
-могут быть достигнуты путём вычисления производной --
-скорости изменения выходных сигналов
-\(v = \mathrm{d}\,x(t)/ \mathrm{d}\,t \),
-и формирования критерия идентификации на её основе.
+Перші дві вимоги можуть бути досягнуті шляхом обчислення
+похідної ---
+швидкості зміни вихідних сигналів
+\(v = \mathrm{d} \, x (t) / \mathrm{d} \, t \),
+і формування критерію ідентифікації на цієї основі.
 
-Однако, при этом система становится исключительно чувствительной
-к шумам измерения. Даже в том случае, когда
-оценка производной производится физически реализуемыми методами,
-создать работоспособную систему идентификации на основе критериев
-подобного вида практически невозможно.
+Однак, при цьому система стає занадто чутливою до шумів
+вимірювання. Навіть в тому випадку, коли оцінка похідної
+проводиться фізично реалізованими методами, створити
+працездатну систему ідентифікації на основі критеріїв
+подібного виду практично неможливо.
 
-В работе \cite{atu_asau11} был предложен метод синтеза критерия идентификации
-на основе гистерезисной фильтрации выходных сигналов, с последующим
-вычислением производной. Метод показал свою работоспособность, однако,
-он требует достаточно точных сведений об уровне и виде шумов -- для
-настройки гистерезисного фильтра. В данной работе сделаем предположение,
-что уровень шумов позволяет создать фильтр, позволяющий отсеивать шумы
-за (как максимум) характерное время реакции системы.
-После фильтра действует реальное дифференцирующее звено.
-Соответствующий вид критерия обозначим как $ q_\mathrm{dx} $ (рис.~\ref{atu:f:fric_q}).
-
-
+В роботі \cite{atu_asau11} був запропонований метод синтезу критерію
+ідентифікації на основі гістерезисної фільтрації вихідних
+сигналів, з подальшим обчисленням похідної. Метод показав свою
+працездатність, однак, він вимагає досить точної інформації про
+рівень і вигляд шумів --- для налаштування гістерезисного фільтру.
+У даній роботі зроблено припущення, що рівень шумів дозволяє створити фільтр, який
+подавляє шуми за (як максимум) характерний час реакції системи. Після
+фільтра діє реальна ланка, що диференціює. Відповідний вид критерію позначимо як
+$q_{dx}$ (рис.~\ref{atu:f:fric_q}).
 
 \begin{figure}[htb!]
 \centerline{
   \includegraphics[width=0.60\textwidth]{p/cha/fric/fric_q-p_f_dm_q.png}
 }
-  \caption{Зависимость $q_\mathrm{dx}(f_{dm})$ для системы (\ref{atu:eq:dryfric_sys}) }
+\caption{Залежність $q_{dx}(f_{dm})$ для системи (\ref{atu:eq:dryfric_sys}) }
 \label{atu:f:fric_q}
 \end{figure}
 
-Несмотря на выраженную нелинейность в начальной части графика,
-данный критерий представляется вполне применимым для задачи идентификации,
-ввиду монотонности ограниченным диапазоном производной.
-При больших значениях параметра $f_{dm}$ смысл этого критерия теряется,
-так как отсутствует динамика системы. При малых значениях возможности идентификации
-тоже сильно ограничены, так как динамика системы больше определяется
-массой объекта, чем пренебрежимо малой силой трения.
+Незважаючи на виражену нелінійність в початковій частині
+графіка, цей критерій видається цілком прийнятним для задачі
+ідентифікації, з огляду на монотонність і обмежений діапазон
+похідної. При великих значеннях параметра
+$f_{dm}$ сенс цього критерію втрачається, так як відсутня динаміка
+системи. При малих значеннях можливості ідентифікації теж
+сильно обмежені, так як динаміка системи більше визначається
+масою об'єкта, ніж нехтовно малою силою тертя.
 
 % }}}2
 
 
-\subsection{Тестовая задача идентификации }   % {{{2
+\subsection{Тестова задача ідентифікації} % {{{2
 
-Аналогично уже рассмотренным система
-определим тестовую задачу следующим образом:
+Аналогічно вже розглянутим систем визначимо тестове завдання
+наступним чином:
 \[
   f_{dm}(t) \equiv p_o(t) \in (0.1, 1.5),
 \]
@@ -164,40 +160,48 @@ $ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
   \label{atu:eq:fric_po_t_sin}
 \end{equation}
 %
-где:
-$p_0 = 0.7$, $U_p=0.4$, $\omega_p=0.0104719755$.
+де:
+$p_0 = 0.7$, $U_p=0.4$, $\omega_p = \pi / 300$.
 
-Динамика процессов идентификации для системы (\ref{atu:eq:dryfric_sys})
-с использованием группы методов ql3rlWvnAAW.$q_\mathrm{dx}$
-при условии (\ref{atu:eq:fric_po_t_sign})
+Динаміка процесів ідентифікації для системи (\ref{atu:eq:dryfric_sys})
+з використанням групи методів ql3rlWvnAAW.$q_\mathrm{dx} $ за умови (\ref{atu:eq:fric_po_t_sign})
 представлена на рис.~\ref{atu:f:fric_id_ql3rlWvnAAW_q_dx_sign}.
 
-
 \begin{figure}[htb!]
-  \centerline{
+  \begin{center}
+    ~ \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_t_pi_ql3rlWvnAAW_sign.png}
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_t_p_ql3rlWvnAAW_sign.png}
-  }
-  \caption{Процесс идентификации параметра ``$f_{dm}$'' системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$ при условии~(\ref{atu:eq:fric_po_t_sign})}
-  \label{atu:f:fric_id_ql3rlWvnAAW_q_dx_sign}
+    \hfill ~
+  \end{center}
+  \vspace{-1.5ex}
+  \begin{center}
+    ~ \hfill a \hfill\hfill b \hfill ~
+  \end{center}
+  \vspace{-2.5ex}
+\caption{
+  Процес ідентифікації параметра $f_{dm}$ системи (\ref{atu:eq:dryfric_sys}) групою методів ``ql3rlWvnAAW''
+  при умовах (\ref{atu:eq:po_t_sign})~(a) і  (\ref{atu:eq:po_t_sin})~(b)
+}
+\label{atu:f:fric_id_ql3rlWvnAAW_q_dx_sign}
 \end{figure}
 
-Для рассматриваемых условий наблюдается малый уровень возмущений
-идентифицируемого параметра. Однако, при малых значениях $f_{dm}$
-наблюдается заметная статическая ошибка идентификации. Это связано с тем,
-что в этой области влияние трения становится мало,
-и критерий теряет свою адекватность.
+Для розглянутих умов спостерігається низький рівень збурень
+ідентифікованого параметра. Однак, при малих значеннях
+$ f_{dm} $ спостерігається помітна статична похибка
+ідентифікації. Це пов'язано з тим, що в цій області вплив тертя
+стає малим, і критерій втрачає свою адекватність.
 
-Следует отметить, что при
-больших значениях $\omega_p$ наблюдается
-сильное влияние входного сигнала, В силу того, что когда системы неподвижны
-на одном из ``плато'', в эти моменты нет возможности различить их параметры,
-какой бы критерий при этом не использовался.
+Слід зазначити, що при великих значеннях
+$ \omega_p $ спостерігається сильний вплив вхідного сигналу, В силу
+того, що коли системи нерухомі на одному з ``плато'', в ці моменти
+немає можливості розрізнити їх параметри, якой б критерій при
+цьому не використовувався.
 
-Результаты моделирования при аналогичных условиях, но
-при динамике параметра, заданной (\ref{atu:eq:fric_po_t_sin}),
-представлены на рис.~\ref{atu:f:fric_id_ql3rlWvnAAW_q_dx_sin}.
+Результати моделювання при аналогічних умовах, але при
+динаміці параметра, заданої (\ref{atu:eq:fric_po_t_sin}), представлені на
+рис.~\ref{atu:f:fric_id_ql3rlWvnAAW_q_dx_sin}.
 
 \begin{figure}[htb!]
   \centerline{
@@ -205,16 +209,17 @@ $p_0 = 0.7$, $U_p=0.4$, $\omega_p=0.0104719755$.
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_t_p_ql3rlWvnAAW_sin.png}
   }
-  \caption{Процесс идентификации параметра ``$f_{dm}$'' системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$ при условии~(\ref{atu:eq:fric_po_t_sin})}
-  \label{atu:f:fric_id_ql3rlWvnAAW_q_dx_sin}
+\caption{Процес ідентифікації параметра ``$f_{dm}$'' системи (\ref{atu:eq:dryfric_sys}) групою методів ql3rlWvnAAW.$q_\mathrm{dx}$ за умови~(\ref{atu:eq:fric_po_t_sin})}
+\label{atu:f:fric_id_ql3rlWvnAAW_q_dx_sin}
 \end{figure}
 
-За исключением уже упомянутой области, в которой критерий перестаёт работать,
-наблюдается весьма низкий уровень ошибок идентификации.
-В первую очередь это обусловлено тем, что данная система не является
-хаотической, и проявляет только некоторые подобные свойства.
-И как следствие, критерий, основанный на физических свойствах системы
-позволяет создать систему идентификации с низким уровнем ошибок.
+За винятком уже згаданої області, в якій критерій перестає
+працювати, спостерігається досить низький рівень помилок
+ідентифікації. В першу чергу це обумовлено тим, що дана система
+не є хаотичною, і проявляє тільки деякі подібні властивості. І
+як наслідок, критерій, заснований на фізичних властивостях
+системи, дозволяє створити систему ідентифікації з низьким
+рівнем помилок.
 
 
 % }}}2
@@ -222,22 +227,25 @@ $p_0 = 0.7$, $U_p=0.4$, $\omega_p=0.0104719755$.
 
 
 
-\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы }  % {{{2
+\subsection{Вплив параметрів системи ідентифікації на похибку ідентифікації для системи} % {{{2
 
-Относительно низкий достигнутый уровень ошибки идентификации
-для данной системы даёт возможность выпукло проявить влияние
-параметров системы идентификации.
+Відносно низький досягнутий рівень похибки ідентифікації для
+даної системи дає можливість докладніше дослідити вплив параметрів
+системи ідентифікації.
 
 
-Зависимости $\overline{e_*}(a_q)$ (рис.~\ref{atu:f:fric_a_q_ql3rlWvnAAW_q_dx})
-позволяют определить корректное время усреденения критерия.
-Меньшее оптимальное (в смысле минимума ошибки) значение
-для плавно меняющегося значения параметра является ожидаемым явлением.
-Отличительной особенностью данной системы является то,
-что минимальную ошибку идентификации позволяет достичь метод
-$p_{ge}$ координатора поиска, а метод $p_{le}$,
-обычно показывающий лучшие результаты,
-находится на втором месте.
+Залежності
+$ \overline{e_*} (a_q) $
+(рис.~\ref{atu:f:fric_a_q_ql3rlWvnAAW_q_dx}) дозволяють визначити
+коректний час усереднення критерію. Менше оптимальне (в сенсі
+мінімуму похибки) значення для плавної зміни значення
+параметра є очікуваним явищем. Відмінною особливістю даної
+системи є те, що мінімальну похибку ідентифікації дозволяє
+досягти метод
+$ p_{ge} $ координатора пошуку, а метод
+$ p_{le} $, який зазвичай показує кращі результати, знаходиться на
+другому місці.
+
 % TODO: why?
 
 \begin{figure}[htb!]
@@ -246,16 +254,15 @@ $p_{ge}$ координатора поиска, а метод $p_{le}$,
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_a_q_sin.png}
   }
-  \caption{Зависимости $\overline{e}(a_q)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$
-   при~(\ref{atu:eq:fric_po_t_sign}) и (\ref{atu:eq:fric_po_t_sin})}
-  \label{atu:f:fric_a_q_ql3rlWvnAAW_q_dx}
+\caption{Залежності $ \overline{e} (a_q)$ при ідентифікації системи (\ref{atu:eq:dryfric_sys}) групою методів ql3rlWvnAAW.$q_\mathrm{dx} $ при~(\ref{atu:eq:fric_po_t_sign}) і (\ref{atu:eq:fric_po_t_sin})}
+\label{atu:f:fric_a_q_ql3rlWvnAAW_q_dx}
 \end{figure}
 
 
-Зависимость ошибок идентификации от величины коэффициента масштаба
+Залежність помилок ідентифікації від величини коефіцієнта масштабу
 $q_\gamma$
 (рис.~\ref{atu:f:fric_q_gamma_ql3rlWvnAAW_q_dx})
-достаточно сильно отличатся от аналогичных для других систем.
+досить сильно відрізняться від аналогічних для інших систем.
 
 \begin{figure}[htb!]
   \centerline{
@@ -263,30 +270,28 @@ $q_\gamma$
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_q_gamma_sin.png}
   }
-  \caption{Зависимости $\overline{e}(q_\gamma)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$
-   при~(\ref{atu:eq:fric_po_t_sign}) и (\ref{atu:eq:fric_po_t_sin})}
-  \label{atu:f:fric_q_gamma_ql3rlWvnAAW_q_dx}
+\caption{Залежності $ \overline{e} (q_\gamma) $ при ідентифікації системи (\ref{atu:eq:dryfric_sys}) групою методів ql3rlWvnAAW.$q_\mathrm{dx} $ при~(\ref{atu:eq:fric_po_t_sign}) і (\ref{atu:eq:fric_po_t_sin})}
+\label{atu:f:fric_q_gamma_ql3rlWvnAAW_q_dx}
 \end{figure}
 
-При скачкообразно изменяющемся параметре
-нет характерного роста ошибки при избыточной чувствительности
-(в ограниченных пределах). При этом существует явное разделение между
-результатами работы методов координатора поиска.
-Методы, использующие значения $p_e$ от поисковых
-агентов, показывают существенно лучшие результаты.
-Такое отличие достаточно очевидно, но именно для этой системы
-и этих условий
-различие столь существенно.
-В случае плавно изменяющемся параметра различие не столь существенно,
-но при недостаточной чувствительности наилучшие результаты демонстрирует метод $p_{lc}$,
-что довольно неожиданно.
+При стрибкоподібних змінах параметра немає характерного
+зростання похибки при надмірній чутливості (в обмежених
+межах). При цьому існує наявне розділення між результатами
+роботи методів координатора пошуку. Методи, які використовують
+значення
+$ p_e $ від пошукових агентів, показують істотно кращі
+результати. Така відмінність досить очевидна, але саме для цієї
+системи і цих умов відмінність проявляє собі настільки істотно. У разі плавних
+змін параметра відмінність не настільки істотна, але при
+недостатній чутливості найкращі результати демонструє метод
+$p_{lc}$, що досить несподівано.
 
 
-На рис.~\ref{atu:f:fric_v_f_ql3rlWvnAAW_q_dx} представлены зависимости ошибки идентификации
-от коэффициента скорости поиска $v_f$.
-Вид этих зависимостей не проявляет никаких особенностей.
-Для плавно меняющегося параметра выигрыш от смещения агентов достигает 800\%,
-для скачкообразных изменений --- порядка 20--25\%.
+На рис.~\ref{atu:f:fric_v_f_ql3rlWvnAAW_q_dx} представлені залежності похибки
+ідентифікації від коефіцієнта швидкості пошуку
+$v_f$. Вид цих залежностей не проявляє ніяких особливостей. Для
+плавних змін параметра виграш від зсуву агентів досягає
+800\%, для стрибкоподібних змін --- порядку 20--25\%.
 
 \begin{figure}[htb!]
   \centerline{
@@ -294,20 +299,17 @@ $q_\gamma$
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_v_f_sin.png}
   }
-  \caption{Зависимости $\overline{e}(v_f)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$
-   при~(\ref{atu:eq:fric_po_t_sign}) и (\ref{atu:eq:fric_po_t_sin})}
-  \label{atu:f:fric_v_f_ql3rlWvnAAW_q_dx}
+\caption{Залежності $ \overline{e} (v_f) $ при ідентифікації системи (\ref{atu:eq:dryfric_sys}) групою методів ql3rlWvnAAW.$q_\mathrm{dx} $ при~(\ref{atu:eq:fric_po_t_sign}) і (\ref{atu:eq:fric_po_t_sin})}
+\label{atu:f:fric_v_f_ql3rlWvnAAW_q_dx}
 \end{figure}
 
-Зависимости ошибок идентификации от коэффициента $k_e$,
-определяющего равновесное положение агентов
-(рис.~\ref{atu:f:fric_k_e_ql3rlWvnAAW_q_dx}),
-для данной системы наиболее ярко выражены
-при плавном изменении параметра,
-что подчёркивает пользу от динамики агентов.
-Для скачкообразного изменения параметров динамика
-агентов уступает динамике параметра,
-и зависимости выражены слабее.
+Залежності помилок ідентифікації від коефіцієнта
+$ k_e $, що визначає рівноважний стан агентів
+(рис.~\ref{atu:f:fric_k_e_ql3rlWvnAAW_q_dx}), для даної системи найбільш яскраво
+виражені при плавній зміні параметра, що підкреслює користь
+від динаміки агентів. Для стрибкоподібної зміни параметрів
+динаміка агентів поступається динаміці параметра, і залежності
+виражені не неастільки істотно.
 
 \begin{figure}[htb!]
   \centerline{
@@ -315,20 +317,17 @@ $q_\gamma$
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_k_e_sin.png}
   }
-  \caption{Зависимости $\overline{e}(k_e)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$
-   при~(\ref{atu:eq:fric_po_t_sign}) и (\ref{atu:eq:fric_po_t_sin})}
+\caption{Залежності $ \overline{e} (k_e) $ при ідентифікації системи (\ref{atu:eq:dryfric_sys}) групою методів ql3rlWvnAAW.$q_\mathrm{dx} $ при~(\ref{atu:eq:fric_po_t_sign}) і (\ref{atu:eq:fric_po_t_sin})}
   \label{atu:f:fric_k_e_ql3rlWvnAAW_q_dx}
 \end{figure}
 
-Зависимости ошибок от параметра $k_{nl}$
-(рис.~\ref{atu:f:fric_k_nl_ql3rlWvnAAW_q_dx}),
-определяющего взаимодействие между агентами,
-при скачкообразных изменениях параметра
-не проявляет существенной зависимости.
-Напротив, для плавно изменяющегося значения параметра
-существует явно выраженный минимум, соответствующий
-балансу между практически свободной динамикой агентов (с учётом ограничений),
-и практически фиксированной сеткой агентов.
+Залежності похибок ідентифікації від параметра
+$k_{nl} $ (рис.~\ref{atu:f:fric_k_nl_ql3rlWvnAAW_q_dx}), який визначає взаємодію між
+агентами, при стрибкоподібних змінах параметра не проявляє
+істотній залежності. Навпаки, якщо значення
+параметра плавно змінюється, існує явно виражений мінімум, відповідний балансу між
+практично вільною динамікою агентів (з урахуванням обмежень),
+і практично фіксованою сіткою агентів.
 
 \begin{figure}[htb!]
   \centerline{
@@ -336,39 +335,40 @@ $q_\gamma$
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_k_nl_sin.png}
   }
-  \caption{Зависимости $\overline{e}(k_{nl})$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$
-   при~(\ref{atu:eq:fric_po_t_sign}) и (\ref{atu:eq:fric_po_t_sin})}
-  \label{atu:f:fric_k_nl_ql3rlWvnAAW_q_dx}
+\caption{Залежності $ \overline{e} (k_{nl}) $ при ідентифікації системи (\ref{atu:eq:dryfric_sys}) групою методів ql3rlWvnAAW.$q_\mathrm{dx} $ при~(\ref{atu:eq:fric_po_t_sign}) і (\ref{atu:eq:fric_po_t_sin})}
+\label{atu:f:fric_k_nl_ql3rlWvnAAW_q_dx}
 \end{figure}
 
 
 % }}}2
 
-\subsection{Выводы}  % {{{2
+\subsection{Висновки}%{{{2
 
-В целом, результаты моделирования как динамики системы с силой сухого трения,
-и процессов идентификации параметра $f_{dm}$ этой системы,
-позволяют сделать следующие выводы:
+В цілому, результати моделювання як динаміки системи з силою
+сухого тертя, і процесів ідентифікації параметра
+$ f_{dm} $ цієї системи, дозволяють зробити наступні висновки:
 
 \begin{itemize}
 
   \item
-    Несмотря на то, что система не проявляет в рассматриваемых условиях хаотическую динамику,
-    для идентификации требуется использование специального критерия. Это связано с тем,
-    что рассматриваемая система имеет общее свойство с системами динамического хаоса ---
-    малые изменения параметра или же входного сигнала могут приводить к
-    существенным различиям в динамике.
+    Незважаючи на те, що система не виявляє в розглянутих умовах
+    хаотичну динаміку, для її ідентифікації потрібне використання
+    спеціального критерію. Це пов'язано з тим, що розглянута система
+    має загальну властивість з системами динамічного хаосу --- малі
+    зміни параметра або ж вхідного сигналу можуть призводити до
+    істотних відмінностей у динаміці.
 
   \item
-    Для данной системы энергетические критерии, аналогичные применённым в предыдущих случаях,
-    оказались неприменимы. Критерий, хоть и основанный на измерении производной (после фильтрации),
-    оказался работоспособным. В первую очередь это связано с тем, что в основе были положены
-    физические принципы, которые для системы с сухим трением, вполне очевидны.
+    Для даної системи енергетичні критерії, аналогічні застосованим
+    в попередніх випадках, виявилися незастосовними. Критерій, хоч і
+    заснований на вимірюванні похідною (після фільтрації), виявився
+    працездатним. В першу чергу це пов'язано з тим, що в основі були
+    покладені фізичні принципи, які для системи з сухим тертям цілком очевидні.
 
   \item
-    Зависимости ошибки идентификации от параметров системы идентификации
-    для данной системы выражены достаточно ярко,
-    что связано с отсутствием настоящей хаотической динамики.
+    Залежності похибки ідентифікації від параметрів системи
+    ідентифікації для даної системи виражені досить яскраво, що
+    пов'язано з відсутністю справжньої хаотичної динаміки.
 
 \end{itemize}
 
